--- a/apparelkart-webclient/package.json
+++ b/apparelkart-webclient/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.13",
+    "@types/node": "^24.5.2",
     "tailwindcss": "^4.1.13",
     "typescript": "~5.8.3",
     "vite": "^7.1.6"
